[package]
name = "cloth-simulation-bevy-rust"
version = "0.1.0"
authors = ["jbargu <jure.grabnar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_ecs = "0.7.0"
bevy = "0.7.0"
bevy_prototype_lyon = "0.5.0"
bevy_egui = "0.14"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
